2008-12-19 [paul]	0.22.0

	0.22 released

2008-12-19 [paul]	0.21.0cvs7

	* configure.ac
	* po/cs.po
		added by David Vachulka
	* po/ru.po
		updated by Aleksei Miheev

2008-12-07 [paul]	0.21.0cvs6

	* configure.ac
		clean up check for curl

2008-12-07 [paul]	0.21.0cvs5

	* configure.ac
		prohibit gcc4's signedness warning

2008-12-02 [colin]	0.21.0cvs4

	* libgtkhtml/graphics/htmlimagefactory.c
		Better fix for 0.21.0cvs1 - don't use
		weak pointers to objects more short-
		lived than the image, and don't add
		an extra ref (which caused heavier 
		memory usage as images were never
		freed)

2008-11-28 [colin]	0.21.0cvs3

	* libgtkhtml/graphics/htmlimagefactory.c
		Fix deferred loading of image (where the
		default "broken" image was ref'ed as the
		real one)

2008-11-28 [colin]	0.21.0cvs2

	* po/fr.po
		Update

2008-11-26 [colin]	0.21.0cvs1

	* src/gtkhtml2_viewer.c
		Silence valgrind (uninitialized
		reads)
	* libgtkhtml/graphics/htmlimagefactory.c
		Fix dangling pointer on image
		handling - probably fixes bug 1767,
		'claws-mail segfaults quite often 
		when selecting items in rssyl'

2008-10-10 [paul]	0.21.0

	0.21 released

2008-10-04 [colin]	0.20.0cvs2

	* src/claws.def
		Fix symbols

2008-10-04 [colin]	0.20.0cvs1

	* src/gtkhtml2_viewer.c
		Win32: set translation dir

2008-10-03 [paul]	0.20.0

	0.20 released

2008-10-03 [paul]	0.19.0cvs12

	* configure.ac
	* po/ru.po
		added by Aleksei Miheev
	* po/ca.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
		updated by Miquel Oliete, Flammie Pirinen,
		Colin Leroy, Pader Rezo

2008-09-27 [colin]	0.19.0cvs11

	* src/gtkhtml2_viewer.c
		Windows port

2008-09-26 [colin]	0.19.0cvs10

	* configure.ac
	* src/Makefile.am
	* src/claws.def
	* src/gtkhtml2_viewer.c
	* src/plugin.def
	* src/version.rc
		Prepare for Win32 port

2008-09-17 [colin]	0.19.0cvs9

	* src/gtkhtml2_viewer.c
		Fix off-by-one; maybe fixes bug 1719, 'cm crashes 
		on touching html message'

2008-09-09 [paul]	0.19.0cvs8

	* src/gtkhtml2_viewer.c